Update documentation and packaging.

--- a/docs/fragments/header.html
+++ b/docs/fragments/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Basic Server project</title>
+    <title>Esecurity project</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
     <style>
       body {
