Update doc information.

--- a/docs/fragments/header.html
+++ b/docs/fragments/header.html
@@ -35,5 +35,5 @@
     </script>
   </head>
   <body>
-    <h1>Basic Server project</h1>
-    <p>The Basic Server project test suite.</p>
+    <h1>Esecurity</h1>
+    <p>The Esecurity test suite.</p>
